[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/Game elements/Details/Details.gd" type="Script" id=1]

[node name="Details" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 500.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 500.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 500.0
margin_bottom = 64.0
rect_min_size = Vector2( 500, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
expand = true

[node name="Seed_name" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 500.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name:"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 68.0
margin_right = 500.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Seeding_label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 248.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Days taken for seeding:"
valign = 1

[node name="Seed_drop" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Days to Drops Seeds:"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 130.0
margin_right = 500.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stable_days" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_right = 248.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Days to be stable:"
valign = 1

[node name="Late_stable" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Days To Be Latestable:"
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 192.0
margin_right = 500.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
